# advent-of-code-2022

./: Readme.md  pyproject.toml
src/day_1/: main.py
